src/test/ui/consts/const-fn-not-safe-for-const.stderr
error[E0015]: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  --> $DIR/const-fn-not-safe-for-const.rs:14:5
   |
LL |     random()
   |     ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
